--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="slideshow-container">
             <!-- Slideshow Images -->
             <div class="mySlides fade">
-                <img src="zzroad.jpg" alt="ZigZag Road" style="width:100%">
+                <img src="E1.jpg" alt="Main Menu" style="width:100%">
                 <div class="text">
                     <h3>Bami The Bird</h3>
                     <p>Designed to be a unique UNITY 3D game. Arcade Style Bird game enriched with terrain, audio and animations. </p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="mySlides fade">
-                <img src="fruitninja.jpg" alt="Fruit Ninja" style="width:100%">
+                <img src="E2.jpg" alt="Game Play" style="width:100%">
                 <div class="text">
                     <h3>Bami The Bird</h3>
                     <p>It is an endless flying game whose goal is to collect gems and get high scores.</p>
@@ -88,20 +88,13 @@
             </div>
 
             <div class="mySlides fade">
-                <img src="fruitninja.jpg" alt="Fruit Ninja" style="width:100%">
+                <img src="E4.jpg" alt="Leaderboard" style="width:100%">
                 <div class="text">
                     <h3>Leaderboard & Player Data Systems</h3>
                     <p>Game has UNITY Leaderboard. Players names collected via Unity Cloud Save System. </p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
-                <img src="birdgame.jpg" alt="BirdWay" style="width:100%">
-                <div class="text">
-                    <h3>Advertising System</h3>
-                    <p>Using UNITY LevelPlay system.</p>
-                </div>
-            </div>
 
             <!-- Previous and Next buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
