--- a/index.html
+++ b/index.html
@@ -50,14 +50,24 @@
             <!-- Hakkımda metni kısmı -->
             <div class="about-text">
                 <p>Hi! I’m Efe. After graduating as an Electrical & Electronics Engineer and working (and still working) for 8 years in the Defense Industry, I decided to take a big step toward a new career that I can truly enjoy. My primary goal is to learn everything about this vast gaming industry as quickly as possible. Luckily, I’m a fast learner. At this stage, I am:</p>
-                
+
                 <ul>
                     <li> </li>
                     <li><i id="mode-icon" class="fas fa-star"></i> Creating 3D mini mobile games by using UNITY. </li>
                     <li><i id="mode-icon" class="fas fa-star"></i> a Prompt engineer, i like to spending time with text-to-Image tools. (For my creations visit: <a class="underline-link" href="https://www.instagram.com/designyourfuture.ai/" target="_blank">designyourfuture </a>)</li>
                     <li><i id="mode-icon" class="fas fa-star"></i> a Jira trainer in a company of 15 thousand people. <strong>This is why i' m master at Jira and Confluence Tools</strong>.</li>
                 </ul>
-                
+
+                <p>My first game "Bami The Bird" is now Test Stage and will be publish soon on Android and IOS platforms. It has:</p>
+
+                <ul>
+                    <li> </li>
+                    <li><i id="mode-icon" class="fas fa-star"></i> Unity/LevelPlay Advertisement System. </li>
+                    <li><i id="mode-icon" class="fas fa-star"></i> Leaderboard. </li>
+                    <li><i id="mode-icon" class="fas fa-star"></i> Bonus effects; Camera shake, post-process layers. </li>
+                    <li><i id="mode-icon" class="fas fa-star"></i> Confluence library. </li>
+
+                </ul>
             </div>
         </div>
           <div class="button-container">
@@ -72,7 +82,7 @@
         <div class="slideshow-container">
             <!-- Slideshow Images -->
             <div class="mySlides fade">
-                <img src="E1.jpg" alt="Main Menu" style="width:100%">
+                <img src="E1.PNG" alt="Main Menu" style="width:100%">
                 <div class="text">
                     <h3>Bami The Bird</h3>
                     <p>Designed to be a unique UNITY 3D game. Arcade Style Bird game enriched with terrain, audio and animations. </p>
@@ -80,7 +90,7 @@
             </div>
 
             <div class="mySlides fade">
-                <img src="E2.jpg" alt="Game Play" style="width:100%">
+                <img src="E2.PNG" alt="Game Play" style="width:100%">
                 <div class="text">
                     <h3>Bami The Bird</h3>
                     <p>It is an endless flying game whose goal is to collect gems and get high scores.</p>
@@ -88,7 +98,7 @@
             </div>
 
             <div class="mySlides fade">
-                <img src="E4.jpg" alt="Leaderboard" style="width:100%">
+                <img src="E4.PNG" alt="Leaderboard" style="width:100%">
                 <div class="text">
                     <h3>Leaderboard & Player Data Systems</h3>
                     <p>Game has UNITY Leaderboard. Players names collected via Unity Cloud Save System. </p>
