--- a/index.html
+++ b/index.html
@@ -103,9 +103,19 @@
                 text-align: center;
                 background: rgba(0, 0, 0, 0.6);
                 color: white;
-                padding: 10px 20px;
+                padding: 8px 16px;
                 box-sizing: border-box;
+                overflow: hidden;
+                font-size: 14px;
             }
+                .text p {
+                    margin: 5px 0 0 0;
+                    line-height: 1.4;
+                    word-wrap: break-word;
+                    max-width: 90%;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
 
             .fade {
                 animation-name: fade;
